# lil-blog-uploader

./: README.md  app.py  proxy.py  pyproject.toml  requirements.in  requirements.txt
exit/: pip-selfcheck.json
static/css/: custom.css
stop/: pip-selfcheck.json
templates/: base.html  success.html  uploader.html
