[tool.poetry]
name = "lil-blog-uploader"
version = "0.1.7"
description = ""
authors = ["Library Innovation Lab <lil@law.harvard.edu>"]
readme = "README.md"
packages = [{include = "lil_blog_uploader"}]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.26"
flask = "^2.2.2"
flask-wtf = "^1.0.1"
gunicorn = "^20.1.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
